# ai-hardware-agent-examples

./: .gitignore  CMakeLists.txt  README.md
examples/goldieos/: BUILD.md  CMakeLists.txt
examples/goldieos/apps/AItalk/: app_icon.h  main_app.cpp  main_ui.h
examples/goldieos/apps/AItalk/assets/: ellipse_48_48_boundary.h  rgb16_angry_female_l_88_85.h  rgb16_angry_female_r1_88_85.h  rgb16_angry_female_r2_88_85.h  rgb16_angry_male_l_88_85.h  rgb16_angry_male_r1_88_85.h  rgb16_angry_male_r2_88_85.h  rgb16_back2_48_48.h  rgb16_bow_56_53.h  rgb16_bowtie_56_53.h  rgb16_closeeye_l_88_85.h  rgb16_closeeye_l_new_88_85.h  rgb16_closeeye_r1_88_85.h  rgb16_closeeye_r1_new_88_85.h  rgb16_closeeye_r2_88_85.h  rgb16_closeeye_r2_new_88_85.h  rgb16_closeeye_r3_88_85.h  rgb16_closeeye_r3_new_88_85.h  rgb16_closeeye_r_88_85.h  rgb16_closeeye_r_new_88_85.h  rgb16_doubt_female_l_88_85.h  rgb16_doubt_female_r1_88_85.h  rgb16_doubt_female_r2_88_85.h  rgb16_doubt_male_l_88_85.h  rgb16_doubt_male_r1_88_85.h  rgb16_doubt_male_r2_88_85.h  rgb16_eye_88_85.h  rgb16_eye_new_88_85.h  rgb16_half_l_88_85.h  rgb16_half_l_new_88_85.h  rgb16_half_r_88_85.h  rgb16_half_r_new_88_85.h  rgb16_laugh_l_88_85.h  rgb16_laugh_l_new_88_85.h  rgb16_laugh_r_88_85.h  rgb16_laugh_r_new_88_85.h  rgb16_sad_female_l_88_85.h  rgb16_sad_female_r_88_85.h  rgb16_sad_male_l_88_85.h  rgb16_sad_male_r_88_85.h  (+3 more)
examples/goldieos/apps/Story/: app_icon.h  ellipse_56_56_boundary.h  ellipse_64_61_boundary.h  main_app.cpp  main_ui.h  mp3_player.c  mp3_player.h  rgb16_back3_48_24.h  rgb16_list_24_21.h  rgb16_next_56_56.h  rgb16_previous_56_56.h  rgb16_start_64_61.h  rgb16_stop_64_61.h  round_rect_240_24_r1_boundary.h  round_rect_248_26_r5_boundary.h  round_rect_24_21_r1_boundary.h  round_rect_256_32_r5_boundary.h  round_rect_272_29_r5_boundary.h  round_rect_320_233_r2_boundary.h  round_rect_320_236_r1_boundary.h
examples/goldieos/apps/Walkie-talkie/: ellipse_64_61_boundary.h  main_app.cpp  main_ui.h  rgb16_Record1_24_21.h  rgb16_Record_24_20.h  rgb16_Recording1_64_61.h  rgb16_Recording_64_61.h  rgb16_Scene_32_20.h  rgb16_Walkie_talkie_56_56.h  rgb16_back2_24_24.h  rgb16_signal1_32_20.h  round_rect_232_32_r4_boundary.h  round_rect_24_21_r1_boundary.h  round_rect_24_24_r1_boundary.h  round_rect_256_199_r0_boundary.h  round_rect_32_20_r1_boundary.h  round_rect_56_20_r1_boundary.h  round_rect_64_16_r1_boundary.h  round_rect_72_42_r1_boundary.h
examples/goldieos/apps/alarm/: main_app.cpp  main_ui.h
examples/goldieos/apps/alarm/assets/: ellipse_24_24_boundary.h  ellipse_32_29_boundary.h  rgb16_add1_40_28.h  rgb16_back3_48_24.h  rgb16_clock_56_56.h  rgb16_minus_40_28.h  rgb16_switch_64_19.h  rgb16_switch_pressed_pressed_56_24.h  rgb16_switch_released_56_24.h  round_rect_112_26_r2_boundary.h  round_rect_272_104_r1_boundary.h  round_rect_272_26_r3_boundary.h  round_rect_272_32_r3_boundary.h  round_rect_272_34_r4_boundary.h  (+9 more)
examples/goldieos/apps/animaton_player/: animation_player.h  app_icon.h  main_app.cpp  main_ui.h
examples/goldieos/apps/charging_only/: main_app.cpp  main_ui.h
examples/goldieos/apps/dualscreen_ai/: main_app.cpp  main_ui.h  rgb16_angry_man_1_160_160.h  rgb16_angry_woman_1_160_160.h  rgb16_confused_1_160_160.h  rgb16_confused_2_160_160.h  rgb16_cry_man_1_160_160.h  rgb16_cry_man_2_160_160.h  rgb16_cry_woman_1_160_160.h  rgb16_cry_woman_2_160_160.h  rgb16_happy_1_160_160.h  rgb16_happy_2_160_160.h  rgb16_wink_4_160_160.h  rgb16_wink_man_1_160_160.h  rgb16_wink_man_2_160_160.h  rgb16_wink_man_3_160_160.h  rgb16_wink_woman_1_160_160.h  rgb16_wink_woman_2_160_160.h  rgb16_wink_woman_3_160_160.h  round_rect_160_160_r1_boundary.h
examples/goldieos/apps/launcher/: battery_view.cpp  battery_view.h  main_app.cpp  main_ui.h  nearlink_view.cpp  nearlink_view.h  wifi_view.cpp  wifi_view.h
examples/goldieos/apps/recorder/: main_app.cpp  main_ui.h
examples/goldieos/apps/settings/: app_icon.h  main_app.cpp  main_ui.h
examples/goldieos/apps/shut_down/: main_app.cpp  main_ui.h
examples/goldieos/compat/: goldie_osal.h
examples/goldieos/config/: convai.cfg
examples/goldieos/docs/: function_call.md
examples/goldieos/drivers/audio_pa/: pa_drv.c
examples/goldieos/drivers/battery/: bat_driver.c  bat_zcv.h
examples/goldieos/drivers/extern_io/: aw9523b.c  aw9523b.h
examples/goldieos/drivers/i2c/: i2c.c
examples/goldieos/drivers/keyboard/: ext_gpio_keyboard.c  gpio_keyboard.c
examples/goldieos/drivers/lcd/: gc9d01.c  ili9341.c  spi_lcd.h  st7789.c
examples/goldieos/drivers/rtc/: pcf8563.c
examples/goldieos/drivers/touch/: cst816d.c  ft6336.c
examples/goldieos/include/core/: app_manager.h  audio_service.h  driver_core.h  driver_manager.h  event_service.h  input_service.h  ringbuffer.h  sdcard_service.h  service_manager.h  sle_sdp_service.h  sle_wtp_service.h  tiny_codec_opus.h  wifi_service.h
examples/goldieos/include/gui/: checkbox_view.h  default_app_icon.h  list_item_frame_view.h  list_view.h  msgbox_view.h  progressbar_view.h  switch_view.h  textedit_view.h  view.h  ws63_font.h
examples/goldieos/include/osal/: goldie_display.h  goldie_osal.h
examples/goldieos/include/services/: udp_shell.h  web_server.h
examples/goldieos/init/: system_init.c
examples/goldieos/platform/: convai_platform_ws63.c  convai_platform_ws63.h
examples/goldieos/platform/ws63/: platform_init.c  stubs.c
examples/goldieos/sdk_integration/: convai_bridge.c  convai_bridge.h  convai_codec_g711a.c  convai_codec_g711a.h  convai_config.c  convai_config.h
examples/goldieos/services/alarm_service/: alarm_service.c
examples/goldieos/services/aud_algo/: aualgo_service.c  nihaoxiaohe_model.h  nihaoxiaoxing_model.h
examples/goldieos/services/network_components/: tftp_server.c  udp_shell.c  web_server.c
examples/goldieos/services/ntp_service/: ntp_service.c
examples/goldieos/services/sle_service/: sle_sdp_service.c  sle_wtp_service.c
examples/goldieos/tools/TinyUI_Creator/: temp.tinyui  tiny_ui.cfg  tools.cfg
examples/goldieos/tools/mcp/: goldieos_buildtool.py
examples/linux_demo/: CMakeLists.txt  main.c
(+162 files in other folders)
